--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node-sass": "^9.0.0",
     "sass": "^1.71.1",
     "sass-loader": "^14.1.1",
+    "style-loader": "^3.3.4",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4"
   }
