--- a/package.json
+++ b/package.json
@@ -16,12 +16,10 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^6.10.0",
+    "dart-sass": "^1.25.0",
     "mini-css-extract-plugin": "^2.8.0",
-    "node-sass": "^9.0.0",
     "nodemon": "^3.0.3",
-    "sass": "^1.71.1",
     "sass-loader": "^14.1.1",
-    "style-loader": "^3.3.4",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4"
   }
