--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.1",
     "css-loader": "^6.10.0",
     "dart-sass": "^1.25.0",
     "mini-css-extract-plugin": "^2.8.0",
     "nodemon": "^3.0.3",
     "sass-loader": "^14.1.1",
-    "webpack": "^5.90.3",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack": "^5.90.3"
   }
 }
