Configuração do sistema de templates do webpack

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "dev": "webpack --env development --config webpack.config.js",
     "watch-scss": "nodemon -e scss -x \"npm run dev\"",
     "watch-js": "nodemon -e js -x \"npm run dev\"",
-    "watch": "npm run watch-scss & npm run watch-js"
+    "watch-html": "nodemon -e html --ignore dist/ -x \"npm run dev\"",
+    "watch": "npm run watch-scss & npm run watch-js & npm run watch-html",
+    "deploy": "npm run prod & echo 'fazer deploy'"
   },
   "keywords": [],
   "author": "",
@@ -18,10 +20,12 @@
     "@fortawesome/fontawesome-free": "^6.5.1",
     "css-loader": "^6.10.0",
     "dart-sass": "^1.25.0",
+    "html-loader": "^5.0.0",
+    "html-webpack-plugin": "^5.6.0",
     "mini-css-extract-plugin": "^2.8.0",
     "nodemon": "^3.0.3",
     "sass-loader": "^14.1.1",
-    "webpack-cli": "^5.1.4",
-    "webpack": "^5.90.3"
+    "webpack": "^5.90.3",
+    "webpack-cli": "^5.1.4"
   }
 }
