--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "watch-js": "nodemon -e js -x \"npm run dev\"",
     "watch-html": "nodemon -e html --ignore dist/ -x \"npm run dev\"",
     "watch": "npm run watch-scss & npm run watch-js & npm run watch-html",
-    "deploy": "npm run prod & ./deploy.sh"
+    "deploy": "npm run prod & ./deploy"
   },
   "keywords": [],
   "author": "",
