--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "watch-scss": "nodemon -e scss -x \"npm run dev\"",
     "watch-js": "nodemon -e js -x \"npm run dev\"",
     "watch-html": "nodemon -e html --ignore dist/ -x \"npm run dev\"",
-    "watch": "npm run watch-scss & npm run watch-js & npm run watch-html"
+    "watch-hbs": "nodemon -e hbs --ignore dist/ -x \"npm run dev\"",
+    "watch": "npm run watch-scss & npm run watch-js & npm run watch-html & npm run watch-hbs"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +21,8 @@
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^6.10.0",
     "dart-sass": "^1.25.0",
+    "extract-loader": "^5.1.0",
+    "handlebars-loader": "^1.7.3",
     "html-loader": "^5.0.0",
     "html-webpack-plugin": "^5.6.0",
     "mini-css-extract-plugin": "^2.8.0",
